overflow fix for mobile

--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -5,6 +5,7 @@ footer {
     justify-content: center;
     align-items: center;
     color: black;
+    overflow: hidden;
 }
 
 .footer-header {
